<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search" />
        <item
            android:id="@+id/maps"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/find" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/log"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logOff" />
        </menu>
    </item>

</menu>
